Buzzer with files added to project

--- a/code/mrk-board/drivers/nbproject/Makefile-genesis.properties
+++ b/code/mrk-board/drivers/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Mon Oct 15 16:42:28 CEST 2018
+#Tue Oct 23 08:37:29 CEST 2018
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f03d7c843128b5e50a1f7aa63f2ccfb5
-default.languagetoolchain.dir=/opt/microchip/xc32/v2.10/bin
-configurations-xml=6989863b4d2e3fa10fe7a74ee5163c11
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.10\\bin
+configurations-xml=bde80982bb726a5315e96492e75d3feb
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=ddd77f39013c5d7ceec7afa039614a52
 default.languagetoolchain.version=2.10
-host.platform=linux
+host.platform=windows
 conf.ids=default
