--- a/code/mrk-board/drivers/nbproject/Makefile-genesis.properties
+++ b/code/mrk-board/drivers/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Tue Oct 30 11:21:33 CET 2018
+#Fri Nov 02 14:58:47 CET 2018
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f03d7c843128b5e50a1f7aa63f2ccfb5
-default.languagetoolchain.dir=/opt/microchip/xc32/v2.10/bin
-configurations-xml=ec3c310252c690efd3648aa0cf2e7b04
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.10\\bin
+configurations-xml=9f5c4794c3b2bc17476c231431d56e59
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=ddd77f39013c5d7ceec7afa039614a52
 default.languagetoolchain.version=2.10
-host.platform=linux
+host.platform=windows
 conf.ids=default
